base of summary page templates

--- a/src/app/amounts-summary/amounts-summary.component.html
+++ b/src/app/amounts-summary/amounts-summary.component.html
@@ -1,1 +1,9 @@
-<p>amounts-summary works!</p>
+<div class="d-flex flex-column">
+  <app-main-summary-card></app-main-summary-card>
+  <div class="row row-cols-2">
+    <app-amount-type-card class="col"></app-amount-type-card>
+    <app-amount-type-card class="col"></app-amount-type-card>
+    <app-amount-type-card class="col"></app-amount-type-card>
+    <app-amount-type-card class="col"></app-amount-type-card>
+  </div>
+</div>
