--- a/src/app/amounts-summary/main-summary-card/main-summary-card.component.html
+++ b/src/app/amounts-summary/main-summary-card/main-summary-card.component.html
@@ -1,13 +1,15 @@
 <div class="card text-center">
   <div class="card-header">
-    Featured
+    Summary
   </div>
   <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
+    <h5 class="card-title">Welcome</h5>
     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <a [routerLink]="['/navigator']" [queryParams]="{tab:0}" routerLinkActive="active" class="btn btn-primary">
+      See transactions
+    </a>
   </div>
   <div class="card-footer text-muted">
-    2 days ago
+    You have {{totalCount}} transactions
   </div>
 </div>
