--- a/src/app/amounts-summary/amount-type-card/amount-type-card.component.html
+++ b/src/app/amounts-summary/amount-type-card/amount-type-card.component.html
@@ -1,7 +1,9 @@
 <div class="card">
   <div class="card-body">
-    <h5 class="card-title">Special title treatment</h5>
-    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <h5 class="card-title">{{transactions | transactionCount}}</h5>
+    <p class="card-text">{{transactionsType}}</p>
+    <a href="#" class="btn btn-primary"
+       [routerLink]="['/navigator']" [queryParams]="{tab:typeId}" routerLinkActive="active"
+    >See all</a>
   </div>
 </div>
