--- a/src/app/amounts-list/amounts-list.component.html
+++ b/src/app/amounts-list/amounts-list.component.html
@@ -10,24 +10,24 @@
     </li>
   </ul>
   <div class="tab-content" id="myTabContent">
-    <ol class="list-group list-group-numbered">
-      <li class="list-group-item d-flex justify-content-around align-items-center">
-        <div class="fw-bold">
-          Name
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        <div class="col d-flex justify-content-center">
+          <div><h5>Name</h5></div>
         </div>
-        <div class="fw-bold">
-          Amount
+        <div class="col d-flex justify-content-center">
+          <div><h5>Amount</h5></div>
         </div>
       </li>
       <li *ngFor="let transaction of $transactionsList | async"
-          class="list-group-item d-flex justify-content-around align-items-center">
-        <div>
-          {{transaction.name | fullName}}
+          class="list-group-item d-flex justify-content-between align-items-center">
+        <div class="col d-flex justify-content-center">
+          <div>{{transaction.name | fullName}}</div>
         </div>
-        <div>
-          {{transaction.amount}}
+        <div class="col d-flex justify-content-center">
+          <div>{{transaction.amount}}</div>
         </div>
       </li>
-    </ol>
+    </ul>
   </div>
 </div>
